bug: fix username button not properly aligned on maximized sidebar; add bold text for active tab buttons

--- a/src/main/webapp/assets/css/theme.css
+++ b/src/main/webapp/assets/css/theme.css
@@ -4754,6 +4754,7 @@ fieldset:disabled .btn {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: var(--bs-black) !important;
+  font-weight: 800;
   background-color: var(--bs-primary70);
 }
 
